Add filters to listTopics for `id`, `name`, and `visibility` (#202)
Signed-off-by: Michael Edgar <medgar@redhat.com>